--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 </ul>
 <h3 id="services">Services</h3>
 <ul>
-<li><strong>DevX</strong> is a cloud based service for use during development, test, implementation, and ongoing change with configurable and scalable Temenos Suites on-demand. Click <a href="home/overview.html"><strong>here</strong></a> to find out more.</li>
+<li><strong>Development Platform</strong> is a cloud based service for use during development, test, implementation, and ongoing change with configurable and scalable Temenos Suites on-demand. Click <a href="home/overview.html"><strong>here</strong></a> to find out more.</li>
 </ul>
 <p><br></p>
               <hr>
