--- a/home/architecture.html
+++ b/home/architecture.html
@@ -88,7 +88,7 @@
 <p><img src="images/architecture-process.png" alt=""></p>
 <h3 id="what-are-the-components-of-temenos-development-platform"><strong>What are the components of Temenos Development Platform?</strong></h3>
 <hr>
-<p>Sandbox environments are managed by the Development Portal, and are comprised of distinct components as described below:</p>
+<p>Development &amp; Testing environments are managed by the Development Portal, and are comprised of distinct components as described below:</p>
 <p><img src="images/architecture-customer-facing-systems.png" alt=""></p>
 <table>
 <thead>
