--- a/home/techguides/use-gitlab-repository.html
+++ b/home/techguides/use-gitlab-repository.html
@@ -117,7 +117,7 @@
 </tr>
 <tr>
 <td>plugins</td>
-<td>WAR files can be uploaded in this folder. The files will be deployed inside Jboss EAP.</td>
+<td>WAR files can be uploaded in this folder. The files will be deployed inside Jboss EAP. In addition to this, endpoints related to plugins can be automatically added to an application. For more details, check this <a href="add-app-endpoint.html">page</a>.</td>
 </tr>
 <tr>
 <td>updates</td>
