--- a/home/toc.html
+++ b/home/toc.html
@@ -112,9 +112,12 @@
                     <a href="techguides/t24-development.html" name="" title="Develop T24 packages, plugins and Code">Develop T24 packages, plugins and Code</a>
                   </li>
                   <li>
-                    <a href="techguides/troubleshooting.html" name="" title="Troubleshooting">Troubleshooting</a>
+                    <a href="techguides/jenkins-build-promote-pipelines.html" name="" title="Use Jenkins to Build Pipelines">Use Jenkins to Build Pipelines</a>
                   </li>
                 </ul>  </li>
+            <li>
+              <a href="techguides/troubleshooting.html" name="" title="Troubleshooting">Troubleshooting</a>
+            </li>
             <li>
               <a href="support.html" name="" title="Getting Support">Getting Support</a>
             </li>
