--- a/home/techguides/jenkins-build-promote-pipelines.html
+++ b/home/techguides/jenkins-build-promote-pipelines.html
@@ -94,9 +94,9 @@
 <p>To implement the Pipeline as a code we will use Jenkins Pipeline used to automate tasks associated with building, testing and deploying software.</p>
 <h2 id="prerequisites">Prerequisites</h2>
 <p><em>(Please note that all necessary information is explained below in the next chapters of current document)</em></p>
-<p>•   Valid SSH keys to clone the GIT repositories
-•   Environments IDs - Test/Integrated Dev
-•   Pipeline scripts - Build/Promote </p>
+<p>•   Valid SSH keys to clone the GIT repositories</p>
+<p>•   Environments IDs - Test/Integrated Dev</p>
+<p>•   Pipeline scripts - Build/Promote </p>
 <h2 id="access-development-portal">Access Development Portal</h2>
 <p>Sign into following URL: <code>portal.temenos.cloud</code> using the credentials provided by Temenos (Username and Password):</p>
 <p><img src="images/jenkins-build-portal-login.png" alt=""></p>
@@ -122,7 +122,7 @@
 <p>In the new screen, click Login button on the top-right corner:</p>
 <p><img src="images/jenkins-build-dashboard-login.png" alt=""></p>
 <p><br></p>
-<p>Sign in with user <strong><em>your user</em></strong> and password <strong><em>your password</em></strong></p>
+<p>Sign in with user <strong><em>admin</em></strong> and password <strong><em>changeit</em></strong></p>
 <p><img src="images/jenkins-build-login.png" alt=""></p>
 <div class="NOTE"><h5>Note</h5><p>After first login, you will need to change the password.</p>
 </div>
@@ -217,7 +217,8 @@
 <p>Then click on &#39;Built on&#39;</p>
 <p><img src="images/jenkins-build-built-on.png" alt=""> </p>
 <p>New screen is open. The following parameters are <strong>required to change</strong> according to your setup:</p>
-<p>•   EnvID </p>
+<p>•   SrcRepo </p>
+<p>•   EnvID (see the note below)</p>
 <p>•   emailRecipientsList (optional)</p>
 <p><img src="images/jenkins-build-pipeline-build.png" alt=""> </p>
 <div class="NOTE"><h5>Note</h5><p>The environment ID is the one that appears on the URL address after you login and you click on your environment:</p>
