--- a/home/support.html
+++ b/home/support.html
@@ -74,7 +74,7 @@
 <h3 id="getting-support">Getting Support</h3>
 
 <hr>
-<p>If you have questions or encounter an issue while working with the platform, please address your request to <strong>temenoscloud@temenos.com</strong>.</p>
+<p>If you have questions or encounter an issue while working with the platform, please address your request to <strong>CloudPlatformSupport@temenos.com</strong>.</p>
 <p>Our support team will be able to resolve your issue faster if you can include:</p>
 <ol>
 <li>The time and date of the issue as applicable</li>
