--- a/home/techguides/t24-development.html
+++ b/home/techguides/t24-development.html
@@ -122,7 +122,7 @@ This package is adapted according to the T24 version of your sandbox and it is p
 </tr>
 </tbody>
 </table>
-<div class="NOTE"><h5>Note</h5><p>In order to get the database IP of your Sandbox, contact TemenosCloud team at <br>TemenosCloud@temenos.com.</p>
+<div class="NOTE"><h5>Note</h5><p>In order to get the database IP of your Sandbox, contact Temenos Cloud support team at <br>CloudPlatformSupport@temenos.com.</p>
 </div>
 <h1 id="create-new-project-in-design-studio">Create New Project in Design Studio</h1>
 <p>In order to accomplish the development actions presented at the beginning of the guide, you need to create a new project in Design Studio.</p>
