--- a/home/faq.html
+++ b/home/faq.html
@@ -89,7 +89,7 @@
 <ul>
 <li><strong>Who will handle customers’ queries/issues for Development Platform?</strong></li>
 </ul>
-<p>Sales queries will be handled via the Temenos Cloud (TemenosCloud@temenos.com) support team. Support is available through a dedicated online support portal for cloud infrastructure issues.  All Product issues remain through the Temenos Customer Support. </p>
+<p>Sales queries will be handled via the Temenos Cloud (CloudPlatformSupport@temenos.com) support team. Support is available through a dedicated online support portal for cloud infrastructure issues.  All Product issues remain through the Temenos Customer Support. </p>
 <p><br></p>
               <hr>
               
