--- a/home/toc.html
+++ b/home/toc.html
@@ -106,6 +106,9 @@
                     <a href="techguides/use-gitlab-repository.html" name="" title="Push configuration to an environment">Push configuration to an environment</a>
                   </li>
                   <li>
+                    <a href="techguides/customize-templates.html" name="" title="Customize templates">Customize templates</a>
+                  </li>
+                  <li>
                     <a href="techguides/add-app-endpoint.html" name="" title="Add new endpoints to an application">Add new endpoints to an application</a>
                   </li>
                   <li>
