--- a/home/temenos-cloud-templates.html
+++ b/home/temenos-cloud-templates.html
@@ -71,8 +71,11 @@
         <div class="article row grid-right">
           <div class="col-md-10">
             <article class="content wrap" id="_content" data-uid="">
-<h2 id="how-temenos-cloud-templates-work"><strong>How Temenos Cloud Templates Work?</strong></h2>
 
+<p><script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script type="text/javascript" language="javascript" src="scripts/getTemplates.js"></script>
+<script type="text/javascript" language="javascript" src="scripts/functionToTriggerOnSelect.js"></script></p>
+<h2 id="how-temenos-cloud-templates-work"><strong>How Temenos Cloud Templates Work?</strong></h2>
 <p>The Temenos PaaS platform has the capability to provision environments in a variety of different configurations. This capability is driven through the concept of &#39;Templates&#39; - a simplified view of the constituent elements which make up a sandbox configuration, including:</p>
 <ul>
 <li>Server Size</li>
@@ -83,6 +86,9 @@
 <p><img src="images/sandbox-templates.png" alt=""></p>
 <p>By default, new Templates are added with each monthly release of T24. These Templates follow a standard pattern, configuration and technology stack, but with the most recent releases of T24 being deployed.</p>
 <p>However, the Temenos Development platform team also offer the ability to create customised Templates for clients. For more information, please contact <strong>CloudPlatformSupport@temenos.com</strong>.</p>
+<p>Furthermore, please find below the current templates catalogue. The standard configuration of each template can be explored by selecting the required template from the list.
+<div class="form-group"><select class="form-control" id="templateSelectionId" onchange="functionToTriggerOnSelect(this.value)"><option value="" disabled="" selected="">Select a template</select></div>
+<div id="appendTemplate"></div></p>
 <p><br></p>
               <hr>
               
