--- a/home/toc.html
+++ b/home/toc.html
@@ -103,7 +103,7 @@
                     <a href="techguides/environment-creation-in-paas.html" name="" title="Create environments and organisations">Create environments and organisations</a>
                   </li>
                   <li>
-                    <a href="techguides/use-gitlab-repository.html" name="" title="Push configuration to an environment">Push configuration to an environment</a>
+                    <a href="techguides/use-gitlab-repository.html" name="" title="Deploy features to environment">Deploy features to environment</a>
                   </li>
                   <li>
                     <a href="techguides/customize-templates.html" name="" title="Customize templates">Customize templates</a>
