--- a/home/techguides/use-gitlab-repository.html
+++ b/home/techguides/use-gitlab-repository.html
@@ -95,22 +95,22 @@
 <table>
 <thead>
 <tr>
-<th><strong>Folder Name</strong></th>
-<th>Description</th>
+<th><strong>Folder</strong></th>
+<th>Functionality</th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td>addons</td>
-<td>This folder is designated for AppDynamics. Upload files as JAR.</td>
+<td>This folder is designed for AppDynamics. Upload files as JAR.</td>
 </tr>
 <tr>
 <td>client_files\h2db</td>
 <td>Local H2 database that will be uploaded to the Cloud Environment. Database username must be t24 and password t24 (case sensitive). Database name is mandatory to be “TAFJDB.h2.db” (case sensitive) and must be archived as a ZIP with name TAFJDB.zip (case sensitive). If the above conditions are not satisfied, the database will not be uploaded to the Cloud Environment. This procedure will <strong>replace</strong> the existing database in the cloud with this one. The <strong>old database</strong> will be <strong>lost</strong>, including any records loaded manually.</td>
 </tr>
 <tr>
-<td>client_files\localjars</td>
-<td>Upload here any local jars (not released by T24 Core). There can be any simple Jars used by T24 or other parties. All files will be copied to the module folder inside Jboss and the module.xml file will be updated automatically every time a new commit is triggered in this folder. If a Jar file is corrupted or there are missing dependencies, Jboss will fail to start and the Environment can’t be used. Fixing the issue, will trigger a new rebuild and Jboss restart.</td>
+<td>client_files\helptext</td>
+<td>Custom Help Text files can be uploaded in this folder. The file structure must be the same as HELP.TEXT T24 core. Thus, under client_files\helptext folder, the HelpText folder with subfolders for each component (AA, EB, PP, etc.) is expected.</td>
 </tr>
 <tr>
 <td>packages</td>
@@ -127,6 +127,26 @@
 <tr>
 <td>wsdl</td>
 <td>WSDL files and folders that are required by plug-ins (war file) need to be uploaded here.</td>
+</tr>
+</tbody>
+</table>
+<h2 id="additional-folders">Additional folders</h2>
+<p>The bellow folders are not present as default in environment repository. In any of the bellow functionalities is required, the folder related to that functionality must be first created in environment repository and only after this the functionality of the folder can be used.</p>
+<table>
+<thead>
+<tr>
+<th><strong>Folder</strong></th>
+<th>Functionality</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>client_files\localjars</td>
+<td>This folder is designed for local JARs (not released by T24 Core) installation.<br>Any JAR file used by T24 or other parties can be uploaded in this folder. During deployment, all JARs present in this folder will be deployed in the environment. If a JAR file is corrupted or some dependencies are missing, the environment will not start.</td>
+</tr>
+<tr>
+<td>client_files\localjars\ext</td>
+<td>This folder is designed for local JARs installation inside <strong>TAFJ/ext</strong> folder from the environment.</td>
 </tr>
 </tbody>
 </table>
